force-app/main/default/objects/QTB_PurchaseOrderAccount__c/QTB_PurchaseOrderAccount__c.object-meta.xml
<CustomObject>
    <description>PurchaseOrderAccount junction object</description>
    <label>PurchaseOrderAccount</label>
    <nameField>
        <displayFormat>POA-{000000000}</displayFormat>
        <label>PurchaseOrderAccount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PurchaseOrderAccounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>