force-app/main/default/objects/QTB_PurchaseOrderAccount__c/fields/QTB_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PurchaseOrderAccounts</relationshipLabel>
    <relationshipName>PurchaseOrderAccounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>