force-app/main/default/objects/QTB_PurchaseOrderAccount__c/fields/QTB_Div_Dept_Level__c.field-meta.xml
<CustomField>
    <fullName>QTB_Div_Dept_Level__c</fullName>
    <label>Div/Dept Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>