force-app/main/default/objects/QTB_PurchaseOrderAccount__c/fields/QTB_Division__c.field-meta.xml
<CustomField>
    <fullName>QTB_Division__c</fullName>
    <label>Division</label>
    <length>20</length>
    <type>Text</type>
</CustomField>