force-app/main/default/objects/QTB_PurchaseOrderAccount__c/fields/QTB_End_Date_Merge_field__c.field-meta.xml
<CustomField>
    <fullName>QTB_End_Date_Merge_field__c</fullName>
    <description>This is to format the date field in the Email Template</description>
    <formula>IF(ISBLANK( QTB_Purchase_Order__r.QTB_End_Date__c ), &apos;&apos;, 
TEXT(
    DAY(QTB_Purchase_Order__r.QTB_End_Date__c )
) + &quot;-&quot; +
CASE( MONTH(QTB_Purchase_Order__r.QTB_End_Date__c ),
    1,&quot;JAN&quot;,
    2,&quot;FEB&quot;,
    3,&quot;MAR&quot;,
    4,&quot;APR&quot;,
    5,&quot;MAY&quot;,
    6,&quot;JUN&quot;,
    7,&quot;JUL&quot;,
    8,&quot;AUG&quot;,
    9,&quot;SEP&quot;,
    10,&quot;OCT&quot;,
    11,&quot;NOV&quot;,
    12,&quot;DEC&quot;,
    &quot;Month&quot;)
+ &quot;-&quot; +
TEXT(
    YEAR(QTB_Purchase_Order__r.QTB_End_Date__c )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Merge field</label>
    <type>Text</type>
</CustomField>