force-app/main/default/objects/QTB_PurchaseOrderAccount__c/fields/QTB_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>QTB_Purchase_Order__c</fullName>
    <description>Relation to Purchase Order</description>
    <label>Purchase Order</label>
    <referenceTo>QTB_PurchaseOrder__c</referenceTo>
    <relationshipLabel>PurchaseOrderAccounts</relationshipLabel>
    <relationshipName>PurchaseOrderAccounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>